# pokeapi

./: .bash_profile  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.txt  Dockerfile  ISSUE_TEMPLATE  LICENSE.md  LICENSE.rst  Makefile  POKEMON_SUMMARIES_CONTRIBUTION.md  README.md  REGIONAL_EVOLUTION_IMPLEMENTATION_PLAN.md  SECURITY.md  apollo.config.js  circle.yml  commands.txt  default.nix  docker-compose-dev.yml  docker-compose.override.yml  docker-compose.yml  export_pokemon_summaries.py  gulpfile.js  gunicorn.conf.py  gunicorn.py.ini  import_regional_evolutions.py  init-letsencrypt.sh  manage.py  openapi.yml  package.json  pyproject.toml  regional_evolutions.csv  regional_pokemon_list.csv  regional_scraper.py  requirements.txt  ruff.toml  (+3 more)
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.override.yml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
Resources/: Dockerfile  nginx.conf
alerts/: models.py
config/: docker-compose.py  docker.py  local.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
graphql_api/: auto.py  base.py  constants.py  cost_analysis_backend.py  graphql_test.py  interfaces.py  language_enum.py  loader_key.py  loader_util.py  loaders.py  middleware.py  readme.md  schema.py  test_loader_util.py  urls.py  views.py
hits/: admin.py  models.py
logs/: .2b13bdc2295a5e0767423fe64e3437af2e35de67-audit.json
pokeapi/: CONTRIBUTORS.txt  Dockerfile  README.md
pokemon/: admin.py  api.py  models.py  tests.py  (+2 more)
(+1523 files in other folders)
