[project]
name = "pokeapi"
version = "0.1.0"
description = "The Pokemon API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "coverage==7.13.1",
    "django==5.2.10",
    "django-cachalot==2.8.0",
    "django-cors-headers==4.9.0",
    "django-redis==6.0.0",
    "djangorestframework==3.16.1",
    "drf-spectacular==0.29.0",
    "gunicorn==23.0.0",
    "psycopg==3.3.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
