[project]
name = "pokeapi"
description = "The Pokemon API"
version = "2.10.0"
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = { file = "LICENSE.md" }
dependencies = [
    "django==5.2.10",
    "django-cachalot==2.8.0",
    "django-cors-headers==4.9.0",
    "django-redis==6.0.0",
    "djangorestframework==3.16.1",
    "drf-spectacular==0.29.0",
    "gunicorn==23.0.0",
    "legacy-cgi>=2.6.4 ; python_full_version >= '3.13'",
    "psycopg[binary]==3.3.2",
]

[dependency-groups]
dev = [
    "coverage==7.13.1",
    "pre-commit>=4.6.0",
    "ruff>=0.15.21",
]
